# ALTEGRAD-2025

./: .gitignore  README.md  bridge.py  dataset.py  evaluate.py  generate_submission.py  model.py  pyproject.toml  requirements.txt  train_generative.py
app/: dataset.py  evaluate.py  evaluate_hybrid.py  generate_submission.py  generate_submission_hybrid.py  graph_encoder.py  model.py  rl_data_gen.py  train_dpo.py  train_generative.py
base_line/: main.py  retrieval_answer.py  train_gcn.py
enhanced_baseline/: data_utils.py  retrieval_answer.py  train_gnn.py
