[project]
name = "data-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "rdkit>=2023.3.1",
    "torch>=2.5.0",
    "torch-geometric>=2.3.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "bert-score>=0.3.13",
    "einops>=0.7.0",
    "nltk>=3.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }